<resources>
    <string name="app_name">Toki</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="search_username">Search Username</string>
    <string name="search">Search</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="baseURL_contacts">http://10.0.2.2:5143/api/contacts/</string>
    <string name="test">test</string>
    <string name="base_url">http://10.0.2.2:5143/api/</string>
    <string name="server">server</string>
    <string name="my_server">10.0.2.2:5143</string>
    <string name="type_a_message">Type a message</string>
    <string name="channel_name1">First</string>
    <string name="channel_description1">First channel</string>
    <string name="channel_name2">Second</string>
    <string name="channel_description2">Second channel</string>
    <string name="hit_server">Server</string>
    <string name="select_user">Select User:</string>
    <string name="select_contact">Select Contact:</string>
</resources>